install mantine packages

--- a/apps/mantine-react-table-storybook/package.json
+++ b/apps/mantine-react-table-storybook/package.json
@@ -34,6 +34,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@faker-js/faker": "^7.6.0",
+    "@mantine/core": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
+    "@mantine/modals": "^5.9.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@tanstack/react-table": "^8.7.4",
