--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -57,6 +57,9 @@
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mantine/core": "^5.9.5",
+    "@mantine/hooks": "^5.9.5",
+    "@mantine/modals": "^5.9.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@rollup/plugin-babel": "^6.0.3",
@@ -83,9 +86,9 @@
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
-    "@emotion/styled": ">=11",
+    "@mantine/core": ">=5",
+    "@mantine/hooks": ">=5",
     "@mui/icons-material": ">=5",
-    "@mui/material": ">=5",
     "react": ">=17.0",
     "react-dom": ">=17.0"
   },
