--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.5.2",
+  "version": "0.0.1-alpha.0",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Material UI V5 implementation of TanStack React Table V8, written from the ground up in TypeScript.",
