--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "dev": "next dev --port 3001",
     "docs:build": "next build",
-    "docs:dev": "next dev",
+    "docs:dev": "next dev --port 3001",
     "docs:sitemap": "next-sitemap --config ./next-sitemap.config.cjs",
-    "docs:start": "next start",
+    "docs:start": "next start --port 4001",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start --port 4001"
   },
   "dependencies": {
     "@docsearch/js": "3.3.0",
