--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^5.11.1",
     "@mui/x-date-pickers": "^5.0.11",
     "@next/mdx": "^13.1.0",
+    "@tabler/icons": "1.118.0",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-table": "^8.7.0",
     "@tanstack/react-virtual": "^3.0.0-beta.30",
