--- a/apps/mantine-react-table-storybook/package.json
+++ b/apps/mantine-react-table-storybook/package.json
@@ -39,6 +39,7 @@
     "@mantine/modals": "^5.9.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
+    "@tabler/icons": "1.118.0",
     "@tanstack/react-table": "^8.7.4",
     "mantine-react-table": "workspace:*",
     "react": "^18.2.0",
