--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -60,12 +60,12 @@
     "@mantine/core": "^5.9.5",
     "@mantine/hooks": "^5.9.5",
     "@mantine/modals": "^5.9.5",
-    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.1",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@size-limit/preset-small-lib": "^8.1.0",
+    "@tabler/icons": "1.118.0",
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
@@ -88,7 +88,7 @@
     "@emotion/react": ">=11",
     "@mantine/core": ">=5",
     "@mantine/hooks": ">=5",
-    "@mui/icons-material": ">=5",
+    "@tabler/icons": ">=1.118",
     "react": ">=17.0",
     "react-dom": ">=17.0"
   },
