--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -12,41 +12,42 @@
     "start": "next start --port 4001"
   },
   "dependencies": {
-    "@docsearch/js": "3.3.0",
+    "@docsearch/js": "3.3.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@faker-js/faker": "^7.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mantine/core": "^5.10.0",
+    "@mantine/hooks": "^5.10.0",
+    "@mantine/prism": "5.10.0",
     "@mdx-js/loader": "^2.2.1",
     "@mdx-js/react": "^2.2.1",
-    "@mantine/core": "^5.9.5",
-    "@mantine/hooks": "^5.9.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.1",
-    "@mui/x-date-pickers": "^5.0.11",
-    "@next/mdx": "^13.1.0",
-    "@tabler/icons": "1.118.0",
-    "@tanstack/react-query": "^4.20.4",
+    "@mui/material": "^5.11.3",
+    "@mui/x-date-pickers": "^5.0.12",
+    "@next/mdx": "^13.1.1",
+    "@tabler/icons": "1.119.0",
+    "@tanstack/react-query": "^4.20.9",
     "@tanstack/react-table": "^8.7.0",
     "@tanstack/react-virtual": "^3.0.0-beta.30",
     "@types/mdx": "^2.0.3",
     "dayjs": "^1.11.7",
     "export-to-csv": "^0.2.1",
     "mantine-react-table": "workspace:*",
-    "next": "13.1.0",
-    "next-sitemap": "^3.1.43",
+    "next": "13.1.1",
+    "next-sitemap": "^3.1.44",
     "prism-react-renderer": "^1.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.0",
+    "@types/react-dom": "^18.0.10",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.1",
     "next-plausible": "^3.6.5",
     "raw-loader": "^4.0.2",
     "typescript": "4.9.4"
