--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -31,7 +31,7 @@
     "@tabler/icons": "1.119.0",
     "@tanstack/react-query": "^4.20.9",
     "@tanstack/react-table": "^8.7.0",
-    "@tanstack/react-virtual": "^3.0.0-beta.30",
+    "@tanstack/react-virtual": "3.0.0-beta.30",
     "@types/mdx": "^2.0.3",
     "dayjs": "^1.11.7",
     "export-to-csv": "^0.2.1",
