--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -92,6 +92,6 @@
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.7.0",
     "@tanstack/react-table": "8.7.0",
-    "@tanstack/react-virtual": "^3.0.0-beta.30"
+    "@tanstack/react-virtual": "3.0.0-beta.30"
   }
 }
