--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mantine/core": "^5.10.0",
+    "@mantine/dates": "^5.10.0",
     "@mantine/hooks": "^5.10.0",
     "@mantine/prism": "5.10.0",
     "@mdx-js/loader": "^2.2.1",
