--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -7,7 +7,7 @@ body:
         Thank you for reporting an issue :pray:
 
         Before submitting a new bug/issue, please check the links below to see if there is a solution or question posted there already:
-        - mantine-react-table's [Discussions tab](https://github.com/material/mantine-react-table/discussions)
+        - mantine-react-table's [Discussions tab](https://github.com/KevinVandy/mantine-react-table/discussions)
         - mantine-react-table's [Open Issues](https://github.com/KevinVandy/mantine-react-table/issues?q=is%3Aissue+is%3Aopen+sort%3Aupdated-desc)
         - mantine-react-table's [Closed Issues](https://github.com/KevinVandy/mantine-react-table/issues?q=is%3Aissue+sort%3Aupdated-desc+is%3Aclosed)
 
@@ -29,7 +29,7 @@ body:
     id: react-library-version
     attributes:
       label: react & react-dom versions
-      description: Material-UI v5 requires React and React-Dom v17 or higher
+      description: Must be React and React-Dom v17 or higher
       placeholder: |
         e.g. v17.0.2
     validations:
