--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -29,7 +29,7 @@
     "@next/mdx": "^13.1.2",
     "@tabler/icons": "1.119.0",
     "@tanstack/react-query": "^4.22.0",
-    "@tanstack/react-table": "^8.7.8",
+    "@tanstack/react-table": "8.7.9",
     "@tanstack/react-virtual": "3.0.0-beta.30",
     "@types/mdx": "^2.0.3",
     "dayjs": "^1.11.7",
