--- a/apps/mantine-react-table-docs/examples/font-awesome-icons/sandbox/package.json
+++ b/apps/mantine-react-table-docs/examples/font-awesome-icons/sandbox/package.json
@@ -16,7 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tabler/icons-react": "2.1.2",
     "@mantine/core": "^5.10.0",
-    "mantine-react-table": "^0.7.0",
+    "mantine-react-table": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
