--- a/apps/mantine-react-table-storybook/package.json
+++ b/apps/mantine-react-table-storybook/package.json
@@ -9,7 +9,7 @@
     "storybook:dev": "start-storybook -p 6007"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
     "@storybook/addon-a11y": "^6.5.16",
     "@storybook/addon-actions": "^6.5.16",
@@ -21,22 +21,23 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/react": "^6.5.16",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
     "babel-loader": "^9.1.2",
-    "eslint": "^8.34.0",
-    "storybook-dark-mode": "^2.0.6",
-    "typescript": "^4.9.5",
-    "webpack": "^5.75.0"
+    "eslint": "^8.36.0",
+    "react-docgen-typescript-plugin": "^1.0.5",
+    "storybook-dark-mode": "^2.1.1",
+    "typescript": "^5.0.2",
+    "webpack": "^5.76.3"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
-    "@mantine/core": "^5.10.3",
-    "@mantine/dates": "^5.10.3",
-    "@mantine/hooks": "^5.10.3",
-    "@tabler/icons-react": "2.3.0",
+    "@mantine/core": "^6.0.4",
+    "@mantine/dates": "^6.0.4",
+    "@mantine/hooks": "^6.0.4",
+    "@tabler/icons-react": "2.11.0",
     "dayjs": "^1.11.7",
     "mantine-react-table": "workspace:*",
     "react": "^18.2.0",
