--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.9.4",
+  "version": "1.0.0-beta.0",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -53,34 +53,34 @@
     "size": "size-limit"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
+    "@babel/core": "^7.21.3",
     "@babel/preset-react": "^7.18.6",
-    "@emotion/react": "^11.10.5",
-    "@mantine/core": "^5.10.3",
-    "@mantine/dates": "^5.10.3",
-    "@mantine/hooks": "^5.10.3",
+    "@emotion/react": "^11.10.6",
+    "@mantine/core": "^6.0.4",
+    "@mantine/dates": "^6.0.4",
+    "@mantine/hooks": "^6.0.4",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
-    "@size-limit/preset-small-lib": "^8.1.2",
-    "@tabler/icons-react": "2.3.0",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@size-limit/preset-small-lib": "^8.2.4",
+    "@tabler/icons-react": "2.11.0",
+    "@types/node": "^18.15.10",
+    "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "dayjs": "^1.11.7",
-    "eslint": "^8.34.0",
+    "eslint": "^8.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^3.15.0",
+    "rollup": "^3.20.2",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "size-limit": "^8.1.2",
+    "size-limit": "^8.2.4",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
@@ -92,9 +92,9 @@
     "react-dom": ">=17.0"
   },
   "dependencies": {
-    "@tanstack/match-sorter-utils": "8.7.6",
-    "@tanstack/react-table": "8.7.9",
-    "@tanstack/react-virtual": "3.0.0-beta.47",
+    "@tanstack/match-sorter-utils": "8.8.4",
+    "@tanstack/react-table": "8.8.4",
+    "@tanstack/react-virtual": "3.0.0-beta.54",
     "highlight-words": "1.2.1"
   }
 }
