upgrade to storybook 7

--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -2,50 +2,51 @@
   "name": "mantine-react-table-docs",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev --port 3001",
+    "build": "pnpm docs:build",
+    "dev": "pnpm docs:dev",
     "docs:build": "next build",
     "docs:dev": "next dev --port 3001",
     "docs:sitemap": "next-sitemap --config ./next-sitemap.config.cjs",
     "docs:start": "next start --port 4001",
     "lint": "next lint",
-    "start": "next start --port 4001"
+    "start": "pnpm docs:start",
+    "sitemap": "pnpm docs:sitemap"
   },
   "dependencies": {
     "@docsearch/js": "3.3.3",
     "@emotion/react": "^11.10.6",
     "@emotion/server": "^11.10.0",
     "@faker-js/faker": "^7.6.0",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^6.0.4",
-    "@mantine/dates": "^6.0.4",
-    "@mantine/hooks": "^6.0.4",
-    "@mantine/next": "^6.0.4",
-    "@mantine/prism": "6.0.4",
+    "@mantine/core": "^6.0.7",
+    "@mantine/dates": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@mantine/next": "^6.0.7",
+    "@mantine/prism": "6.0.7",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.4",
-    "@tabler/icons-react": "2.11.0",
-    "@tanstack/react-query": "^4.28.0",
-    "@types/mdx": "^2.0.3",
+    "@next/mdx": "^13.3.0",
+    "@tabler/icons-react": "2.16.0",
+    "@tanstack/react-query": "^4.29.3",
+    "@types/mdx": "^2.0.4",
     "dayjs": "^1.11.7",
     "export-to-csv": "^0.2.1",
     "mantine-react-table": "workspace:*",
-    "next": "13.2.4",
-    "next-sitemap": "^4.0.6",
+    "next": "13.3.0",
+    "next-sitemap": "^4.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.10",
-    "@types/react": "^18.0.29",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
     "next-plausible": "^3.7.2",
     "raw-loader": "^4.0.2",
-    "typescript": "5.0.2"
+    "typescript": "5.0.4"
   }
 }
