--- a/apps/mantine-react-table-storybook/package.json
+++ b/apps/mantine-react-table-storybook/package.json
@@ -2,49 +2,42 @@
   "name": "mantine-react-table-storybook",
   "private": true,
   "scripts": {
-    "build": "build-storybook",
-    "dev": "start-storybook -p 6007",
-    "storybook": "start-storybook -p 6007",
-    "storybook:build": "build-storybook",
-    "storybook:dev": "start-storybook -p 6007"
+    "build": "pnpm storybook:build",
+    "dev": "pnpm storybook:dev",
+    "storybook": "pnpm storybook:dev",
+    "storybook:build": "storybook build",
+    "storybook:dev": "storybook dev -p 6007"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
-    "@babel/preset-react": "^7.18.6",
-    "@storybook/addon-a11y": "^6.5.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/addon-storysource": "^6.5.16",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@types/node": "^18.15.10",
-    "@types/react": "^18.0.29",
+    "@storybook/addon-a11y": "^7.0.5",
+    "@storybook/addon-essentials": "^7.0.5",
+    "@storybook/addon-interactions": "^7.0.5",
+    "@storybook/addon-links": "^7.0.5",
+    "@storybook/addon-storysource": "^7.0.5",
+    "@storybook/blocks": "^7.0.5",
+    "@storybook/react": "^7.0.5",
+    "@storybook/react-vite": "^7.0.5",
+    "@storybook/testing-library": "^0.1.0",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "babel-loader": "^9.1.2",
-    "eslint": "^8.36.0",
-    "react-docgen-typescript-plugin": "^1.0.5",
-    "storybook-dark-mode": "^2.1.1",
-    "typescript": "^5.0.2",
-    "webpack": "^5.76.3"
+    "@vitejs/plugin-react": "^3.1.0",
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.5",
+    "storybook-dark-mode": "^3.0.0",
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@faker-js/faker": "^7.6.0",
-    "@mantine/core": "^6.0.4",
-    "@mantine/dates": "^6.0.4",
-    "@mantine/hooks": "^6.0.4",
-    "@tabler/icons-react": "2.11.0",
+    "@mantine/core": "^6.0.7",
+    "@mantine/dates": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@tabler/icons-react": "2.16.0",
     "dayjs": "^1.11.7",
     "mantine-react-table": "workspace:*",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0"
-  },
-  "resolutions": {
-    "enhanced-resolve": "5.10.0"
   }
 }
