--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "docs:sitemap": "turbo run docs:sitemap",
     "docs:start": "turbo run docs:start",
     "lib:build": "cp README.md packages/mantine-react-table/README.md && turbo run lib:build",
+    "lib:build-locales": "turbo run lib:build-locales",
+    "lib:build-no-locales": "turbo run lib:build-no-locales",
     "lib:dev": "turbo run lib:dev",
     "format": "prettier --write \"**/*.{js,ts,tsx,md}\"",
     "lint": "turbo run lint",
@@ -24,7 +26,7 @@
   },
   "devDependencies": {
     "prettier": "^2.8.7",
-    "turbo": "^1.8.5"
+    "turbo": "^1.9.1"
   },
   "engines": {
     "node": ">=14.0.0"
