--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -45,42 +45,44 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "rm -rf dist && rollup -c && size-limit",
-    "dev": "rm -rf dist && rollup -c -w",
-    "lib:build": "rm -rf dist && rollup -c && size-limit",
-    "lib:dev": "rm -rf dist && rollup -c -w",
+    "build": "pnpm lib:build",
+    "build-locales": "pnpm lib:build-locales",
+    "build-no-locales": "pnpm lib:build-no-locales",
+    "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales",
+    "lib:build-locales": "rm -rf locales && rollup --config rollup-locales.config.mjs",
+    "lib:build-no-locales": "rm -rf dist && rollup --config rollup.config.mjs && size-limit",
     "lint": "eslint .",
     "size": "size-limit"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.3",
+    "@babel/core": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.6",
-    "@mantine/core": "^6.0.4",
-    "@mantine/dates": "^6.0.4",
-    "@mantine/hooks": "^6.0.4",
+    "@mantine/core": "^6.0.7",
+    "@mantine/dates": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^11.1.0",
     "@size-limit/preset-small-lib": "^8.2.4",
-    "@tabler/icons-react": "2.11.0",
-    "@types/node": "^18.15.10",
-    "@types/react": "^18.0.29",
+    "@tabler/icons-react": "2.16.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "dayjs": "^1.11.7",
-    "eslint": "^8.36.0",
+    "eslint": "^8.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^3.20.2",
+    "rollup": "^3.20.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "size-limit": "^8.2.4",
     "tslib": "^2.5.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
