--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -48,9 +48,11 @@
     "build": "pnpm lib:build",
     "build-locales": "pnpm lib:build-locales",
     "build-no-locales": "pnpm lib:build-no-locales",
+    "dev": "pnpm lib:dev",
     "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales",
-    "lib:build-locales": "rm -rf locales && rollup --config rollup-locales.config.mjs",
-    "lib:build-no-locales": "rm -rf dist && rollup --config rollup.config.mjs && size-limit",
+    "lib:build-locales": "rm -rf locales && rollup -c rollup-locales.config.mjs",
+    "lib:build-no-locales": "rm -rf dist && rollup -c rollup.config.mjs && size-limit",
+    "lib:dev": "rollup -c rollup.config.mjs --watch",
     "lint": "eslint .",
     "size": "size-limit"
   },
