--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.5",
+  "version": "1.0.0-beta.6",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -50,35 +50,35 @@
     "build-no-locales": "pnpm lib:build-no-locales",
     "dev": "pnpm lib:dev",
     "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales",
-    "lib:build-locales": "rm -rf locales && rollup -c rollup-locales.config.mjs",
+    "lib:build-locales": "export NODE_OPTIONS=--max_old_space_size=8096 && rm -rf locales && rollup -c rollup-locales.config.mjs",
     "lib:build-no-locales": "rm -rf dist && rollup -c rollup.config.mjs && size-limit",
     "lib:dev": "rollup -c rollup.config.mjs --watch",
     "lint": "eslint .",
     "size": "size-limit"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
+    "@babel/core": "^7.21.8",
     "@babel/preset-react": "^7.18.6",
-    "@emotion/react": "^11.10.6",
-    "@mantine/core": "^6.0.8",
-    "@mantine/dates": "^6.0.8",
-    "@mantine/hooks": "^6.0.8",
+    "@emotion/react": "^11.10.8",
+    "@mantine/core": "^6.0.10",
+    "@mantine/dates": "^6.0.10",
+    "@mantine/hooks": "^6.0.10",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^11.1.0",
     "@size-limit/preset-small-lib": "^8.2.4",
-    "@tabler/icons-react": "2.16.0",
-    "@types/node": "^18.15.12",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@tabler/icons-react": "2.17.0",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "dayjs": "^1.11.7",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^3.20.6",
+    "rollup": "^3.21.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -97,8 +97,8 @@
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
-    "@tanstack/react-table": "8.8.5",
+    "@tanstack/react-table": "8.9.1",
     "@tanstack/react-virtual": "3.0.0-beta.54",
-    "highlight-words": "1.2.1"
+    "highlight-words": "1.2.2"
   }
 }
