implemented date and date-range filters

--- a/apps/mantine-react-table-docs/tsconfig.json
+++ b/apps/mantine-react-table-docs/tsconfig.json
@@ -23,8 +23,7 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx",
-    "components/mdxComponents.js"
+    "**/*.tsx"
   ],
   "exclude": [
     "node_modules"
