--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,20 +6,20 @@ on:
       - main
 
 jobs:
-  prettier:
+  clean-pr:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v2
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2
         with:
-          node-version: '18'
+          version: 8.5.1
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pnpm i
 
       - name: Run Lint
@@ -28,10 +28,10 @@ jobs:
       - name: Run Prettier
         run: pnpm format
 
-      - name: Commit and push changes
+      - name: Commit and Push Changes
         run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+          git config --global user.name 'KevinVandy'
+          git config --global user.email 'kevinvandy@users.noreply.github.com'
           git add -A
-          git commit -m "Prettify code" || exit 0  # in case no changes present
+          git commit -m "Lint and Prettier" || exit 0  # in case no changes present
           git push origin ${{ github.head_ref }}
