--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.15",
+  "version": "1.0.0-beta.16",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -104,6 +104,12 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9"
   },
+  "dependencies": {
+    "@tanstack/match-sorter-utils": "8.8.4",
+    "@tanstack/react-table": "8.9.2",
+    "@tanstack/react-virtual": "3.0.0-beta.54",
+    "highlight-words": "1.2.2"
+  },
   "peerDependencies": {
     "@emotion/react": ">=11",
     "@mantine/core": ">=6",
@@ -113,10 +119,9 @@
     "react": ">=17.0",
     "react-dom": ">=17.0"
   },
-  "dependencies": {
-    "@tanstack/match-sorter-utils": "8.8.4",
-    "@tanstack/react-table": "8.9.2",
-    "@tanstack/react-virtual": "3.0.0-beta.54",
-    "highlight-words": "1.2.2"
+  "peerDependenciesMeta": {
+    "@tabler/icons-react": {
+      "optional": true
+    }
   }
 }
