--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-beta.20",
+  "version": "1.0.0-beta.21",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -107,8 +107,7 @@
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
     "@tanstack/react-table": "8.9.3",
-    "@tanstack/react-virtual": "3.0.0-beta.54",
-    "highlight-words": "1.2.2"
+    "@tanstack/react-virtual": "3.0.0-beta.54"
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
