beta.23 new create row feature

--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -20,21 +20,22 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^6.0.15",
-    "@mantine/dates": "^6.0.15",
-    "@mantine/hooks": "^6.0.15",
-    "@mantine/next": "^6.0.15",
-    "@mantine/prism": "6.0.15",
+    "@mantine/core": "^6.0.16",
+    "@mantine/dates": "^6.0.16",
+    "@mantine/hooks": "^6.0.16",
+    "@mantine/modals": "^6.0.16",
+    "@mantine/next": "^6.0.16",
+    "@mantine/prism": "6.0.16",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.4.7",
+    "@next/mdx": "^13.4.8",
     "@tabler/icons-react": "2.23.0",
     "@tanstack/react-query": "^4.29.19",
     "@types/mdx": "^2.0.5",
     "dayjs": "^1.11.9",
     "export-to-csv": "^0.2.1",
     "mantine-react-table": "workspace:*",
-    "next": "13.4.7",
+    "next": "13.4.8",
     "next-sitemap": "^4.1.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -43,10 +44,10 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "eslint": "8.44.0",
-    "eslint-config-next": "13.4.7",
+    "eslint-config-next": "13.4.8",
     "next-plausible": "^3.8.0",
     "raw-loader": "^4.0.2",
     "typescript": "5.1.6"
