--- a/apps/mantine-react-table-docs/examples/editing-crud/sandbox/package.json
+++ b/apps/mantine-react-table-docs/examples/editing-crud/sandbox/package.json
@@ -13,7 +13,9 @@
     "@mantine/core": "^6.0.15",
     "@mantine/dates": "^6.0.15",
     "@mantine/hooks": "^6.0.15",
+    "@mantine/modals": "^6.0.15",
     "@tabler/icons-react": "2.23.0",
+    "@tanstack/react-query": "^4.29.19",
     "dayjs": "^1.11.9",
     "mantine-react-table": "^1.0.0-beta.21",
     "react": "^18.2.0",
