--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -62,7 +62,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.6",
     "@babel/preset-react": "^7.22.5",
+    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/storybook-addon": "^5.0.0",
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
     "@mantine/core": "^6.0.16",
     "@mantine/dates": "^6.0.16",
@@ -89,6 +92,7 @@
     "@vitejs/plugin-react": "^4.0.1",
     "dayjs": "^1.11.9",
     "eslint": "^8.44.0",
+    "framer-motion": "^10.12.18",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
