--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-@fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=${NPM_RC} 
+@fortawesome:registry=https://registry.npmjs.org
