--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.1",
+  "version": "1.3.0",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -111,9 +111,9 @@
   },
   "peerDependencies": {
     "@emotion/react": ">=11",
-    "@mantine/core": ">=6",
-    "@mantine/dates": ">=6",
-    "@mantine/hooks": ">=6",
+    "@mantine/core": "^6.0",
+    "@mantine/dates": "^6.0",
+    "@mantine/hooks": "^6.0",
     "@tabler/icons-react": ">=2.23.0",
     "react": ">=18.0",
     "react-dom": ">=18.0"
