start mantine v7 upgrades

--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -14,18 +14,15 @@
   },
   "dependencies": {
     "@docsearch/js": "3.5.2",
-    "@emotion/react": "^11.11.1",
-    "@emotion/server": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mantine/core": "^6.0.20",
-    "@mantine/dates": "^6.0.20",
-    "@mantine/hooks": "^6.0.20",
-    "@mantine/modals": "^6.0.20",
-    "@mantine/next": "^6.0.20",
-    "@mantine/prism": "6.0.20",
+    "@mantine/code-highlight": "^7.0.0",
+    "@mantine/core": "^7.0.0",
+    "@mantine/dates": "^7.0.0",
+    "@mantine/hooks": "^7.0.0",
+    "@mantine/modals": "^7.0.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.4.19",
@@ -44,10 +41,10 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next-plausible": "^3.11.1",
