--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.3.0",
+  "version": "2.0.0-alpha.0",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -62,11 +62,10 @@
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "@emotion/react": "^11.11.1",
     "@faker-js/faker": "^8.0.2",
-    "@mantine/core": "^6.0.20",
-    "@mantine/dates": "^6.0.20",
-    "@mantine/hooks": "^6.0.20",
+    "@mantine/core": "^7.0.0",
+    "@mantine/dates": "^7.0.0",
+    "@mantine/hooks": "^7.0.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
@@ -82,10 +81,10 @@
     "@storybook/testing-library": "^0.2.1",
     "@tabler/icons-react": "2.34.0",
     "@types/node": "^20.6.2",
-    "@types/react": "^18.2.21",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-react": "^4.0.4",
     "dayjs": "^1.11.9",
     "eslint": "^8.49.0",
@@ -107,13 +106,12 @@
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
     "@tanstack/react-table": "8.10.0",
-    "@tanstack/react-virtual": "3.0.0-beta.60"
+    "@tanstack/react-virtual": "3.0.0-alpha.0"
   },
   "peerDependencies": {
-    "@emotion/react": ">=11",
-    "@mantine/core": "^6.0",
-    "@mantine/dates": "^6.0",
-    "@mantine/hooks": "^6.0",
+    "@mantine/core": "^7",
+    "@mantine/dates": "^7",
+    "@mantine/hooks": "^7",
     "@tabler/icons-react": ">=2.23.0",
     "react": ">=18.0",
     "react-dom": ">=18.0"
