--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -106,7 +106,7 @@
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
     "@tanstack/react-table": "8.10.0",
-    "@tanstack/react-virtual": "3.0.0-alpha.0"
+    "@tanstack/react-virtual": "3.0.0-beta.60"
   },
   "peerDependencies": {
     "@mantine/core": "^7",
