--- a/apps/mantine-react-table-docs/package.json
+++ b/apps/mantine-react-table-docs/package.json
@@ -29,6 +29,7 @@
     "@tabler/icons-react": "2.34.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/mdx": "^2.0.7",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "export-to-csv": "^1.0.0",
     "jspdf": "^2.5.1",
@@ -48,10 +49,10 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next-plausible": "^3.11.1",
-    "raw-loader": "^4.0.2",
     "postcss": "^8.4.30",
     "postcss-preset-mantine": "^1.7.0",
     "postcss-simple-vars": "^7.0.1",
+    "raw-loader": "^4.0.2",
     "typescript": "5.2.2"
   }
 }
