--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
-    "@faker-js/faker": "^8.0.2",
+    "@faker-js/faker": "^8.1.0",
     "@mantine/core": "^7.0.0",
     "@mantine/dates": "^7.0.0",
     "@mantine/hooks": "^7.0.0",
@@ -70,24 +70,27 @@
     "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-typescript": "^11.1.3",
     "@size-limit/preset-small-lib": "^9.0.0",
-    "@storybook/addon-a11y": "^7.4.2",
-    "@storybook/addon-essentials": "^7.4.2",
-    "@storybook/addon-interactions": "^7.4.2",
-    "@storybook/addon-links": "^7.4.2",
-    "@storybook/addon-storysource": "^7.4.2",
-    "@storybook/blocks": "^7.4.2",
-    "@storybook/react": "^7.4.2",
-    "@storybook/react-vite": "^7.4.2",
+    "@storybook/addon-a11y": "^7.4.3",
+    "@storybook/addon-essentials": "^7.4.3",
+    "@storybook/addon-interactions": "^7.4.3",
+    "@storybook/addon-links": "^7.4.3",
+    "@storybook/addon-storysource": "^7.4.3",
+    "@storybook/blocks": "^7.4.3",
+    "@storybook/react": "^7.4.3",
+    "@storybook/react-vite": "^7.4.3",
     "@storybook/testing-library": "^0.2.1",
     "@tabler/icons-react": "2.34.0",
-    "@types/node": "^20.6.2",
+    "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "@vitejs/plugin-react": "^4.0.4",
-    "dayjs": "^1.11.9",
+    "dayjs": "^1.11.10",
     "eslint": "^8.49.0",
+    "postcss": "^8.4.30",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -96,8 +99,9 @@
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^9.0.0",
-    "storybook": "^7.4.2",
+    "storybook": "^7.4.3",
     "storybook-dark-mode": "^3.0.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
@@ -105,7 +109,7 @@
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
-    "@tanstack/react-table": "8.10.0",
+    "@tanstack/react-table": "8.10.1",
     "@tanstack/react-virtual": "3.0.0-beta.60"
   },
   "peerDependencies": {
