--- a/packages/mantine-react-table/tsconfig.json
+++ b/packages/mantine-react-table/tsconfig.json
@@ -27,6 +27,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "ES6",
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
   "references": [
     {
