--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -88,6 +88,7 @@
     "@vitejs/plugin-react": "^4.1.0",
     "dayjs": "^1.11.10",
     "eslint": "^8.50.0",
+    "eslint-plugin-perfectionist": "^2.1.0",
     "postcss": "^8.4.30",
     "postcss-preset-mantine": "^1.7.0",
     "postcss-simple-vars": "^7.0.1",
