--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -29,6 +29,7 @@
   "files": [
     "dist",
     "locales",
+    "mrt.css",
     "src"
   ],
   "size-limit": [
@@ -63,52 +64,52 @@
     "@babel/core": "^7.23.0",
     "@babel/preset-react": "^7.22.15",
     "@faker-js/faker": "^8.1.0",
-    "@mantine/core": "^7.1.0",
-    "@mantine/dates": "^7.1.0",
-    "@mantine/hooks": "^7.1.0",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-typescript": "^11.1.4",
+    "@mantine/core": "^7.1.2",
+    "@mantine/dates": "^7.1.2",
+    "@mantine/hooks": "^7.1.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@size-limit/preset-small-lib": "^9.0.0",
-    "@storybook/addon-a11y": "^7.4.5",
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
-    "@storybook/addon-storysource": "^7.4.5",
-    "@storybook/blocks": "^7.4.5",
-    "@storybook/react": "^7.4.5",
-    "@storybook/react-vite": "^7.4.5",
-    "@storybook/testing-library": "^0.2.1",
-    "@tabler/icons-react": "2.38.0",
-    "@types/node": "^20.8.0",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
+    "@storybook/addon-a11y": "^7.4.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-storysource": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/react": "^7.4.6",
+    "@storybook/react-vite": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
+    "@tabler/icons-react": "2.39.0",
+    "@types/node": "^20.8.4",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
     "@vitejs/plugin-react": "^4.1.0",
     "dayjs": "^1.11.10",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-perfectionist": "^2.1.0",
     "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.7.0",
+    "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^3.29.4",
+    "rollup": "^4.0.2",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-dts": "^6.0.2",
+    "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "size-limit": "^9.0.0",
-    "storybook": "^7.4.5",
+    "storybook": "^7.4.6",
     "storybook-dark-mode": "^3.0.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "typescript-plugin-css-modules": "^5.0.1",
-    "vite": "^4.4.9"
+    "vite": "^4.4.11"
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
