--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -26,6 +26,16 @@
   "main": "dist/cjs/index.js",
   "module": "dist/esm/mantine-react-table.esm.js",
   "typings": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/esm/mantine-react-table.esm.js",
+      "default": "./dist/cjs/index.js"
+    },
+    "./package.json": "./package.json",
+    "./locales/*": "./locales/*",
+    "./styles.css": "./styles.css"
+  },
   "files": [
     "dist",
     "locales",
@@ -50,7 +60,7 @@
     "build-locales": "pnpm lib:build-locales",
     "build-no-locales": "pnpm lib:build-no-locales",
     "dev": "pnpm lib:dev",
-    "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales",
+    "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales && rm -rf dist/cjs/types dist/esm/types",
     "lib:build-locales": "rm -rf locales && node build-locales.mjs",
     "lib:build-no-locales": "rm -rf dist && rollup -c rollup.config.mjs && size-limit",
     "lib:dev": "rollup -c rollup.config.mjs --watch",
@@ -88,7 +98,7 @@
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-react": "^4.1.0",
     "dayjs": "^1.11.10",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-plugin-perfectionist": "^2.2.0",
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.9.0",
