--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -71,66 +71,66 @@
     "storybook:dev": "storybook dev -p 6007"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.2",
-    "@babel/preset-react": "^7.22.15",
-    "@faker-js/faker": "^8.2.0",
-    "@mantine/core": "^7.1.5",
-    "@mantine/dates": "^7.1.5",
-    "@mantine/hooks": "^7.1.5",
+    "@babel/core": "^7.23.5",
+    "@babel/preset-react": "^7.23.3",
+    "@faker-js/faker": "^8.3.1",
+    "@mantine/core": "^7.3.0",
+    "@mantine/dates": "^7.3.0",
+    "@mantine/hooks": "^7.3.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
-    "@size-limit/preset-small-lib": "^10.0.1",
-    "@storybook/addon-a11y": "^7.5.1",
-    "@storybook/addon-essentials": "^7.5.1",
-    "@storybook/addon-interactions": "^7.5.1",
-    "@storybook/addon-links": "^7.5.1",
-    "@storybook/addon-storysource": "^7.5.1",
-    "@storybook/blocks": "^7.5.1",
-    "@storybook/react": "^7.5.1",
-    "@storybook/react-vite": "^7.5.1",
+    "@size-limit/preset-small-lib": "^11.0.0",
+    "@storybook/addon-a11y": "^7.6.3",
+    "@storybook/addon-essentials": "^7.6.3",
+    "@storybook/addon-interactions": "^7.6.3",
+    "@storybook/addon-links": "^7.6.3",
+    "@storybook/addon-storysource": "^7.6.3",
+    "@storybook/blocks": "^7.6.3",
+    "@storybook/react": "^7.6.3",
+    "@storybook/react-vite": "^7.6.3",
     "@storybook/testing-library": "^0.2.2",
-    "@tabler/icons-react": "2.39.0",
-    "@types/node": "^20.8.9",
-    "@types/react": "^18.2.32",
-    "@types/react-dom": "^18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
-    "@vitejs/plugin-react": "^4.1.0",
+    "@tabler/icons-react": "2.42.0",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.41",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.1",
     "dayjs": "^1.11.10",
-    "eslint": "^8.52.0",
-    "eslint-plugin-perfectionist": "^2.2.0",
-    "postcss": "^8.4.31",
-    "postcss-preset-mantine": "^1.9.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-perfectionist": "^2.5.0",
+    "postcss": "^8.4.32",
+    "postcss-preset-mantine": "^1.11.1",
     "postcss-simple-vars": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^4.1.4",
+    "rollup": "^4.6.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "size-limit": "^10.0.1",
-    "storybook": "^7.5.1",
-    "storybook-dark-mode": "^3.0.1",
+    "size-limit": "^11.0.0",
+    "storybook": "^7.6.3",
+    "storybook-dark-mode": "^3.0.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "typescript-plugin-css-modules": "^5.0.2",
-    "vite": "^4.5.0"
+    "vite": "^5.0.5"
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.8.4",
     "@tanstack/react-table": "8.10.7",
-    "@tanstack/react-virtual": "3.0.0-beta.68",
+    "@tanstack/react-virtual": "3.0.1",
     "clsx": "^2.0.0"
   },
   "peerDependencies": {
-    "@mantine/core": "^7.1",
-    "@mantine/dates": "^7.1",
-    "@mantine/hooks": "^7.1",
+    "@mantine/core": "^7.2",
+    "@mantine/dates": "^7.2",
+    "@mantine/hooks": "^7.2",
     "@tabler/icons-react": ">=2.23.0",
     "react": ">=18.0",
     "react-dom": ">=18.0"
