--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -58,11 +58,11 @@
   "scripts": {
     "build": "pnpm lib:build",
     "build-locales": "pnpm lib:build-locales",
-    "build-no-locales": "pnpm lib:build-no-locales",
+    "build-lib": "pnpm lib:build-lib",
     "dev": "pnpm lib:dev",
-    "lib:build": "rm -rf dist && pnpm build-no-locales && pnpm build-locales && rm -rf dist/cjs/types dist/esm/types",
+    "lib:build": "rm -rf dist && pnpm build-lib && pnpm build-locales && rm -rf dist/cjs/types dist/esm/types",
     "lib:build-locales": "rm -rf locales && node build-locales.mjs",
-    "lib:build-no-locales": "rm -rf dist && rollup -c rollup.config.mjs && size-limit",
+    "lib:build-lib": "rm -rf dist && rollup -c rollup.config.mjs && size-limit",
     "lib:dev": "rollup -c rollup.config.mjs --watch",
     "lint": "eslint .",
     "size": "size-limit",
@@ -71,7 +71,7 @@
     "storybook:dev": "storybook dev -p 6007"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.5",
+    "@babel/core": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "@faker-js/faker": "^8.3.1",
     "@mantine/core": "^7.3.1",
@@ -90,12 +90,12 @@
     "@storybook/react": "^7.6.4",
     "@storybook/react-vite": "^7.6.4",
     "@storybook/testing-library": "^0.2.2",
-    "@tabler/icons-react": "2.42.0",
+    "@tabler/icons-react": "2.44.0",
     "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
+    "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "dayjs": "^1.11.10",
     "eslint": "^8.55.0",
@@ -107,7 +107,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^4.7.0",
+    "rollup": "^4.8.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
